Refactor: Note.getFingering() no longer returns null
This simplifies client code quite a bit.
Also rename music.Fingering.toBrailleString() to
Braille.toString(Fingering) so that the base class can stay
free of braille specific things.